# uyghur-transcript-bench

./: .gitignore  .gitmodules  README.md  README.ug.md  index.html
providers/meta-mms/: pyproject.toml  requirements.txt  transcribe.py
results/sonix/: antal-hadi.srt  dastan-01.srt  dutar-01.srt  speedy-01.srt
results/speechmatics/: dastan-01.srt  speedy-01.srt
sonix/: README.md
